--- a/estilo/misguifos.css
+++ b/estilo/misguifos.css
@@ -268,7 +268,7 @@ body header .head nav {
   }
   body header .head nav .enlace {
     font-size: 1rem;
-    padding: 6px 4px 4px 0;
+    padding: 6px 16px 4px 0;
     line-height: 22px;
     font-family: "chakraReg", Arial, Helvetica, sans-serif;
     font-size: 1rem;
@@ -279,7 +279,7 @@ body header .head nav {
     text-decoration: underline;
   }
   body header .head nav .enlace:hover {
-    border: 1px dotted var(--color-fuente-oscuro);
+    border: 1px dotted var(--color-fuente-nav);
   }
   body header .head nav .enlace:active {
     color: var(--darker-shadow);
